<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout_in_help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.androidocr.HelpActivity">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_main"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="250dp"
                android:layout_height="457dp"
                app:srcCompat="@drawable/step_0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_step_1"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="250dp"
                android:layout_height="457dp"
                app:srcCompat="@drawable/step_1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_step_2"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="250dp"
                android:layout_height="457dp"
                app:srcCompat="@drawable/step_2_1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="250dp"
                android:layout_height="457dp"
                app:srcCompat="@drawable/step_2_2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_step_3"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="250dp"
                android:layout_height="457dp"
                app:srcCompat="@drawable/step_3" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_step_4"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="250dp"
                android:layout_height="457dp"
                app:srcCompat="@drawable/step_4" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_step_5"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="250dp"
                android:layout_height="457dp"
                app:srcCompat="@drawable/step_5" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_step_6"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="250dp"
                android:layout_height="457dp"
                app:srcCompat="@drawable/step_6" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>